--- a/sustainable-info-society.css
+++ b/sustainable-info-society.css
@@ -21,3 +21,11 @@
     background: #fff;
     opacity: 0.9;
 }
+.contact_form_container {
+    /* position: absolute; */
+    width: 260px;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
